--- a/test.ipynb
+++ b/test.ipynb
@@ -358,10 +358,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "li\n",
+      "lk\n",
+      "lh\n",
+      "c\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "ls = {'li': 100, \"lk\": 200, \"lh\": 300, 'c': 400, 'd': 500}\n",
+    "\n",
+    "k = list(ls.items())\n",
+    "\n",
+    "for i in range( len(ls) ):\n",
+    "    print(k[i][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_row_0 = [ [k[i][0], k[i][1]] for i in range(len(ls)) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['li', 100], ['lk', 200], ['lh', 300], ['c', 400], ['d', 500]]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_row_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lin = {'li': 100, \"lk\": 200, \"lh\": 300, 'c': 400, 'd': 500}\n",
+    "m = list(lin.items())\n",
+    "\n",
+    "data_row_1 = [ [m[i][0], m[i][1]] for i in range(len(m)) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['li', 100], ['lk', 200], ['lh', 300], ['c', 400], ['d', 500]]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_row_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['li', 100],\n",
+       " ['lk', 200],\n",
+       " ['lh', 300],\n",
+       " ['c', 400],\n",
+       " ['d', 500],\n",
+       " ['li', 100],\n",
+       " ['lk', 200],\n",
+       " ['lh', 300],\n",
+       " ['c', 400],\n",
+       " ['d', 500]]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_row_0 + data_row_1"
+   ]
   },
   {
    "cell_type": "code",
