--- a/test.ipynb
+++ b/test.ipynb
@@ -35,6 +35,189 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>SignalModel01</th>\n",
+       "      <th>SignalModel02</th>\n",
+       "      <th>SignalModel03</th>\n",
+       "      <th>SignalModel04</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24847270</th>\n",
+       "      <td>1.714406e+18</td>\n",
+       "      <td>0.000048</td>\n",
+       "      <td>0.000062</td>\n",
+       "      <td>0.00004</td>\n",
+       "      <td>0.000049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24847271</th>\n",
+       "      <td>1.714406e+18</td>\n",
+       "      <td>0.000048</td>\n",
+       "      <td>0.000062</td>\n",
+       "      <td>0.00004</td>\n",
+       "      <td>0.000049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24847272</th>\n",
+       "      <td>1.714406e+18</td>\n",
+       "      <td>0.000048</td>\n",
+       "      <td>0.000062</td>\n",
+       "      <td>0.00004</td>\n",
+       "      <td>0.000049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24847273</th>\n",
+       "      <td>1.714406e+18</td>\n",
+       "      <td>0.000048</td>\n",
+       "      <td>0.000062</td>\n",
+       "      <td>0.00004</td>\n",
+       "      <td>0.000049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24847274</th>\n",
+       "      <td>1.714406e+18</td>\n",
+       "      <td>0.000048</td>\n",
+       "      <td>0.000062</td>\n",
+       "      <td>0.00004</td>\n",
+       "      <td>0.000049</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             timestamp  SignalModel01  SignalModel02  SignalModel03  \\\n",
+       "24847270  1.714406e+18       0.000048       0.000062        0.00004   \n",
+       "24847271  1.714406e+18       0.000048       0.000062        0.00004   \n",
+       "24847272  1.714406e+18       0.000048       0.000062        0.00004   \n",
+       "24847273  1.714406e+18       0.000048       0.000062        0.00004   \n",
+       "24847274  1.714406e+18       0.000048       0.000062        0.00004   \n",
+       "\n",
+       "          SignalModel04  \n",
+       "24847270       0.000049  \n",
+       "24847271       0.000049  \n",
+       "24847272       0.000049  \n",
+       "24847273       0.000049  \n",
+       "24847274       0.000049  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_parquet('/data/dp-data/xuefeng_data/ready_for_use/Test202404_Submit20240926/20240401_20240630/btc_usdt_binance/feature_20240430.parquet')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>return_predict</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>25055912</th>\n",
+       "      <td>1.714406e+18</td>\n",
+       "      <td>0.000165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25055913</th>\n",
+       "      <td>1.714406e+18</td>\n",
+       "      <td>0.000164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25055914</th>\n",
+       "      <td>1.714406e+18</td>\n",
+       "      <td>0.000169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25055915</th>\n",
+       "      <td>1.714406e+18</td>\n",
+       "      <td>0.000172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25055916</th>\n",
+       "      <td>1.714406e+18</td>\n",
+       "      <td>0.000173</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             timestamp  return_predict\n",
+       "25055912  1.714406e+18        0.000165\n",
+       "25055913  1.714406e+18        0.000164\n",
+       "25055914  1.714406e+18        0.000169\n",
+       "25055915  1.714406e+18        0.000172\n",
+       "25055916  1.714406e+18        0.000173"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_parquet('/data/dp-data/xuefeng_data/ready_for_use/600s_stagebaseline_202404_1016/20240401_20240630/btc_usdt_binance/feature_20240430.parquet')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
